...
  _MainDestination(
    label: 'ตั้งค่า',
    icon: Icons.settings_outlined,
    selectedIcon: Icons.settings_rounded,
  ),
  _MainDestination(
    label: 'โปรไฟล์',
    icon: Icons.person_outline_rounded,
    selectedIcon: Icons.person_rounded,
  ),
];

class MainAppNavigationRail extends StatelessWidget {
...
